Initial attempt at text input client

--- a/meson.build
+++ b/meson.build
@@ -32,3 +32,8 @@ example = executable('egl-window',
     'egl-window.c',
     protocol_srcs,
     dependencies: deps)
+
+example = executable('text-input',
+    'text-input.c',
+    protocol_srcs,
+    dependencies: deps)
